fix some image glitches on small screens

--- a/_sass/theme/_image-layouts.scss
+++ b/_sass/theme/_image-layouts.scss
@@ -37,15 +37,25 @@ figure.centered {
 }
 
 figure.float-inline-start {
-    max-width: calc(50% - 1rem);
-    margin-inline-end: 1rem;
-    float: inline-start;
+    max-width: 100%;
+    margin-inline: auto;
+
+    @media screen and (min-width: $palm-width) {
+        max-width: calc(50% - 1rem);
+        margin-inline-end: 1rem;
+        float: inline-start;
+    }
 }
 
 figure.float-inline-end {
-    max-width: calc(50% - 1rem);
-    margin-inline-start: 1rem;
-    float: inline-end;
+    max-width: 100%;
+    margin-inline: auto;
+
+    @media screen and (min-width: $palm-width) {
+        max-width: calc(50% - 1rem);
+        margin-inline-start: 1rem;
+        float: inline-end;
+    }
 }
 
 .flow-root {
